--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         <section id="Wie_ben_ik">
             <h2>wie ben ik</h2>
-            <p>Mijn naam is Talha Kucuker</p>
+            <p>Mijn naam is Talha Kucuker, mijn hobby's zijn voetballen en gamen, in mijn vrije tijd voetbal ik </p>
             <p>Ik ben 17 jaar </p>
             <p>Ik heb een turkse afkomst</p>
         </section>
